--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,5 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background-image: url(http://www.clker.com/cliparts/I/0/6/d/S/Z/lined-paper-hi.png);
 }
