--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,13 @@
 }
 
 input {
-  border: 2px black solid;
+  border: 1px white solid;
   height: 30px;
-  width: 120px;
+  width: 140px;
   font-size: 1em;
+  color: gray;
+  background-color: darkgray;
+  opacity: 0.8;
   font-weight: bold;
 }
 
