--- a/src/index.css
+++ b/src/index.css
@@ -2,5 +2,5 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background-image: url(http://www.clker.com/cliparts/I/0/6/d/S/Z/lined-paper-hi.png);
+  background-image: url(http://img01.deviantart.net/dfd9/i/2015/140/a/e/chalkboard_by_lorelinde-d8u2l4g.jpg);
 }
